--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,12 +56,11 @@
     <Analyzer Include="/Applications/Visual Studio.app/Contents/Resources/lib/monodevelop/AddIns/MonoDevelop.Unity/Analyzers/Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets/Scripts/LineIllustrator.cs" />
+    <Compile Include="Assets/Scripts/Package Scripts/LineIllustrator.cs" />
     <Compile Include="Assets/Scripts/UIManager.cs" />
-    <Compile Include="Assets/Scripts/UILineIllustrator.cs" />
-    <Compile Include="Assets/Scripts/LineTest.cs" />
+    <Compile Include="Assets/Scripts/Package Scripts/UILineIllustrator.cs" />
     <Compile Include="Assets/Scripts/HowToPlayController.cs" />
-    <Compile Include="Assets/Scripts/Scroller.cs" />
+    <Compile Include="Assets/Scripts/Package Scripts/Scroller.cs" />
     <Compile Include="Assets/Scripts/LineUI.cs" />
   </ItemGroup>
   <ItemGroup>
