--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,9 +61,10 @@
     <Compile Include="Assets/Scripts/Package Scripts/LineIllustrator.cs" />
     <Compile Include="Assets/Scripts/UIManager.cs" />
     <Compile Include="Assets/Scripts/Package Scripts/UILineIllustrator.cs" />
+    <Compile Include="Assets/Scripts/Package Scripts/CameraControl.cs" />
     <Compile Include="Assets/Scripts/HowToPlayController.cs" />
     <Compile Include="Assets/Scripts/Package Scripts/Scroller.cs" />
-    <Compile Include="Assets/Scripts/Package Scripts/CameraControl.cs" />
+    <Compile Include="Assets/Scripts/TimerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
@@ -762,6 +763,14 @@
     <ProjectReference Include="Unity.2D.IK.Runtime.csproj">
       <Project>{440F5092-466B-0EC5-7D8B-BACD9511D33E}</Project>
       <Name>Unity.2D.IK.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="Cinemachine.csproj">
+      <Project>{583C368C-AA0C-ECBC-062E-57E5DAA46CCB}</Project>
+      <Name>Cinemachine</Name>
+    </ProjectReference>
+    <ProjectReference Include="com.unity.cinemachine.editor.csproj">
+      <Project>{196EE468-FA21-19CB-DC72-3C608B772A3D}</Project>
+      <Name>com.unity.cinemachine.editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Animation.Triangle.Editor.csproj">
       <Project>{A56DC118-030A-1A48-A392-B2FF74B71795}</Project>
