--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Assets/Scripts/HowToPlayController.cs" />
     <Compile Include="Assets/Scripts/Package Scripts/Scroller.cs" />
     <Compile Include="Assets/Scripts/TimerManager.cs" />
+    <Compile Include="Assets/Scripts/PersistentCanvas.cs" />
+    <Compile Include="Assets/Scripts/Theme Handler/ColorThemeManager.cs" />
+    <Compile Include="Assets/Scripts/Theme Handler/ColorThemeHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
