--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets/Scripts/Package Scripts/Scroller.cs" />
     <Compile Include="Assets/Scripts/GameScripts/GridManager.cs" />
     <Compile Include="Assets/Scripts/GameScripts/Dot.cs" />
+    <Compile Include="Assets/Scripts/GameScripts/GameLines.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
