--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Assets/Scripts/UIScripts/HowToPlayController.cs" />
     <Compile Include="Assets/SwipeController/Scripts/DirectionPresets.cs" />
     <Compile Include="Assets/Scripts/Package Scripts/Scroller.cs" />
+    <Compile Include="Assets/LoadingScreen/LoadingManager.cs" />
+    <Compile Include="Assets/LoadingScreen/ChangeSceneButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
