adding turn set up state

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Assets/LoadingScreen/ChangeSceneButton.cs" />
     <Compile Include="Assets/Scripts/GameScripts/PlayerHandler.cs" />
     <Compile Include="Assets/Scripts/GameScripts/GameInitializer.cs" />
+    <Compile Include="Assets/Scripts/GameScripts/State/TurnSetUpState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
