--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,7 +11,9 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.netcode.gameobjects": "1.2.0",
     "com.unity.render-pipelines.universal": "10.9.0",
+    "com.unity.services.relay": "1.0.5",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
