--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.netcode.gameobjects": "1.4.0",
     "com.unity.render-pipelines.universal": "10.9.0",
+    "com.unity.services.lobby": "1.0.3",
     "com.unity.services.relay": "1.0.5",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
